--- a/app/views/application/index.html
+++ b/app/views/application/index.html
@@ -1,28 +1,36 @@
-<section id="rsvpapp" ng-controller="MainCtrl">
+<section id="rsvpapp" ng-controller="RsvpsCtrl">
   <ng-view></ng-view>
 
-  <form id="rsvp-form">
+  <form id="rsvp-form" ng-submit="createRsvp()">
     <div class="row">
       <div class="large-12 columns">
         <label>Your Name
-          <input type="text" placeholder="Your Name" />
+          <input type="text" placeholder="Your Name" ng-model="rsvp.name" />
         </label>
       </div>
     </div>
     <div class="row">
       <div class="large-6 columns">
-        <label>Choose Your Favorite</label>
-        <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Red</label>
-        <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Blue</label>
+        <label>Will you attend?</label>
+        <input type="radio" id="rsvpYes" ng-model="rsvp.attending" ng-value="true"><label for="rsvpYes">Yes</label>
+        <input type="radio" id="rsvpNo" ng-model="rsvp.attending" ng-value="false"><label for="rsvpYes">No</label>
       </div>
     </div>
     <div class="row">
       <div class="large-12 columns">
         <label>Number of People
-          <input type="text" placeholder="Number of People" />
+          <input type="text" placeholder="Number of People" ng-model="rsvp.number" />
         </label>
+        <button type="submit" class="btn btn-default">RSVP</button>
       </div>
     </div>
   </form>
+
+<h2>Attending</h2>
+  <ul>
+    <li ng-repeat="rsvp in rsvps">
+      {{rsvp.name}}, {{rsvp.attending}}
+    </li>
+  </ul>
 
  </section>
