--- a/app/views/application/index.html
+++ b/app/views/application/index.html
@@ -1,4 +1,4 @@
-<section id="rsvpapp" ng-controller="RsvpsCtrl">
+<section id="rsvpme" ng-controller="RsvpsCtrl">
   <ng-view></ng-view>
 
   <form id="rsvp-form" ng-submit="createRsvp()">
@@ -25,12 +25,5 @@
       </div>
     </div>
   </form>
-
-<h2>Attending</h2>
-  <ul>
-    <li ng-repeat="rsvp in rsvps">
-      {{rsvp.name}}, {{rsvp.attending}}
-    </li>
-  </ul>
 
  </section>
