--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,9 +1,8 @@
 <div class="container">
   <div class="background">
 
-  <%= render 'form' %>
+    <%= render 'form' %>
+    <div id="message"></div>
 
   </div>
 </div>
-
-<div id="main"></div>
