--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -1,7 +1,9 @@
 <div class="form_container">
   <h2><span class="sexy">Avery's</span> Winter <span class="sexy">One</span>-derland!</h2>
-  <h3>We hope you can come and celebrate with us!</h3>
   <%= simple_form_for(@rsvp, remote: true) do |f| %>
+    <h3>We hope you can come and celebrate with us!</h3>
+
+    <%= f.error_notification %>
 
     <div class="form-inputs">
       <%= f.input :name, label: "Your Name" %>
