--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,3 +1,7 @@
 $primary-font: "Poiret-One", tahoma, sans-serif;
 $sexy-font: "MA-Sexy";
-$pink: #fb95de;
+$light-pink: #ffd8de;
+$pink: #ffd8de;
+$dark-pink: #ff94a4;
+
+$button-bg-color: $dark-pink;
