--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,8 +1,8 @@
+<div class="background"></div>
+
 <div class="container">
-  <div class="background">
 
     <%= render 'form' %>
     <div id="message"></div>
 
-  </div>
 </div>
