--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -1,18 +1,22 @@
 <div class="form_container">
   <h2><span class="sexy">Avery's</span> Winter <span class="sexy">One</span>-derland!</h2>
-  <%= parsley_simple_for(@rsvp, remote: true) do |f| %>
+  <%= simple_form_for(@rsvp, remote: true, html: { :"data-parsley-validate" => '' }) do |f| %>
     <h3>We hope you can celebrate with us!</h3>
 
-    <%= f.error_notification %>
+    <%#= f.error_notification %>
 
     <div class="form-inputs">
-      <%= f.input :name, label: "Your Name" %>
+      <%#= f.input :name, label: "Your Name" %>
+      <div class="input string required rsvp_name">
+        <label class="string required" for="rsvp_name">Your Name</label>
+        <input class="string required" id="rsvp_name" name="rsvp[name]" type="text" data-parsley-error-message="Please enter your name." required autofocus>
+      </div>
 
       <div class="input radio required rsvp_attending">
         <input type="radio" id="rsvp_attending_true" name="rsvp[attending]" value="true" checked>
         <label for="rsvp_attending_true">Yes, I'll be there!</label>
         <input type="radio" id="rsvp_attending_false" name="rsvp[attending]" value="false">
-        <label for="rsvp_attending_false">Sorry I can't make it.</label>
+        <label for="rsvp_attending_false">Sorry, I can't make it.</label>
      </div>
 
       <%= f.input :number, label: "Number of people" %>
