--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -67,3 +67,8 @@ input[type=radio]:checked + label {
     background-color: $dark-pink;
     color: #fff;
 }
+
+
+.parsley-custom-error-message {
+  color: red;
+}
