--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -27,7 +27,10 @@ input[type="text"] {
 }
 
 #rsvp_name {
-  width: 400px;
+  width: 90%;
+  @media only screen and (min-device-width : 760px) {
+    width: 400px;
+  }
 }
 
 #rsvp_number {
