--- a/app/views/rsvps/_rsvp.html.erb
+++ b/app/views/rsvps/_rsvp.html.erb
@@ -1,5 +1,8 @@
 <% if @rsvp.attending %>
-  <h4>Thanks <%= @rsvp.first_name %>, we can't wait to see you!</h4>
+  <h4>Thanks <%= @rsvp.first_name %>, we can't wait to celabrate with you!</h4>
+  <p>Saturday, January 24 at 10:30 AM</p>
+  <p class="sexy">Heritage Littles</p>
+  <p>2868 North Lincoln Ave</p>
 <% else %>
   <h4>Sorry, We'll miss you, <%= @rsvp.first_name %>.</h4>
 <% end %>
