--- a/app/views/rsvps/create.js.erb
+++ b/app/views/rsvps/create.js.erb
@@ -1,2 +1,2 @@
 $('#new_rsvp').remove();
-$('#message').append("<%= j (render @rsvp) %>");
+$('#message').append("<%= j (render @rsvp) %>").hide().fadeIn();
