--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,7 +12,7 @@ body {
   }
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, p {
   font-family: $primary-font;
   color: $dark-pink;
 }
@@ -56,11 +56,20 @@ h4 {
    }
 }
 
-.form_container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 40px 0;
-  @media only screen and (min-device-width : 760px) {
-    padding: 90px 0;
+#message {
+  margin-top: 20px;
+
+  h4 {
+    margin-bottom: 20px
+  }
+
+  p {
+    margin-bottom: 0;
+    font-size: 18px
+  }
+
+  .sexy {
+    font-size: 28px;
+    margin-top: 10px;
   }
 }
