--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -84,3 +84,7 @@ input[type=radio]:checked + label {
 .parsley-custom-error-message {
   color: red;
 }
+
+ul.parsley-errors-list {
+  list-style-type: none;
+}
