changed number field to string

--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -16,7 +16,7 @@
         <label for="rsvp_attending_false">Sorry, I can't make it.</label>
      </div>
 
-      <%= f.input :number, label: "Number of people" %>
+      <%= f.input :number, as: :string, label: "Number of people" %>
     </div>
 
     <div class="form-actions">
